<resources>
    <string name="app_name">PartnersApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_text">Неверный логин или пароль</string>
    <string name="error_authorization">Ошибка авторизации</string>
    <string name="text_login">72855249</string>
    <string name="test_password">8783446692</string>
    <string name="users_agreement">Нажимая «Далее» Вы соглашаетесь с условиями <a href="https://www.ufanet.ru/media/uploads/2021/11/30/Dizi.pdf">пользовательского соглашения</a></string>
    <string name="btn_text_auth">Далее</string>
    <string name="password_auth">Пароль</string>
    <string name="login_auth">Лицевой счет</string>
    <string name="welcome_text_auth">Привет, Друг</string>
    <string name="sale_partners">Скидки от партнеров</string>
    <string name="example_name_screen">Название страницы</string>
</resources>