<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.screen.authorization.Authorization">


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="85dp"
        android:layout_height="67dp"
        android:layout_marginBottom="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonLogPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:padding="16dp"
        android:text="@string/welcome_text_auth"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/firstStateColor"
                android:backgroundTint="@color/firstStateColor"
                android:hint="@string/login_auth"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:shadowRadius="8"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/firstStateColor"
                android:backgroundTint="@color/firstStateColor"
                android:hint="@string/password_auth"
                android:inputType="textPassword"
                android:padding="12dp"
                android:shadowRadius="8"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edLogin" />

            <ImageButton
                android:id="@+id/imageButtonPassVisible"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/firstStateColor"
                android:src="@drawable/state_selector_image_button"
                app:layout_constraintBottom_toBottomOf="@+id/edPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/edPassword" />

            <TextView
                android:id="@+id/tvError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="12sp"
                android:textColor="@color/red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edPassword"
                tools:ignore="RtlSymmetry" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btnAuthorization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/element_style"
            android:padding="16dp"
            android:text="@string/btn_text_auth"
            android:enabled="false"
            android:textAlignment="center"
            android:textSize="17sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/tvUserAgr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/users_agreement"
            android:autoLink="web"
            android:textAlignment="center" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>